Bug 200842 - file dialogue: pressing Esc to close old-style URL combo switches back to breadcrumb navigation
Summary: file dialogue: pressing Esc to close old-style URL combo switches back to bre...
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-20 10:40 UTC by Jonathan Marten
Modified: 2010-04-17 09:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch to fix (see comment) (1.23 KB, patch)
2010-04-15 18:00 UTC, Jonathan Marten
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Marten 2009-07-20 10:40:35 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

Open an open or save file dialogue, and switch to the old-style URL combo box if necessary (middle click on breadcrumb location and select Edit).  Click the combo box down-arrow as if intending to select something from the history, and then press Escape to close the dropdown.  The URL combo box will switch back to the breadcrumb navigation bar.

Expected behaviour would be that the combo box dropdown simply disappears.
Comment 1 Jonathan Marten 2009-07-20 11:19:01 UTC
s/middle click/menu click/, of course.
Comment 2 Jonathan Marten 2010-04-15 18:00:47 UTC
Created attachment 42803 [details]
Patch to fix (see comment)

Acting on the keyPressEvent instead of keyReleaseEvent in KUrlNavigator (kdelibs/kfile/kurlnavigator.cpp) appears to solve the problem, with all other actions of the Escape key worling as expected.  Patch attached.
Comment 3 Jonathan Marten 2010-04-15 18:30:33 UTC
Review request at http://reviewboard.kde.org/r/3613/
Comment 4 Jonathan Marten 2010-04-17 09:23:10 UTC
SVN commit 1115714 by marten:

Do not switch the old-style URL combo box back to breadcrumb
navigation mode if the Escape key is pressed while the combo box
is open.

Review at http://reviewboard.kde.org/r/3613/

BUG:200842


 M  +3 -2      kurlnavigator.cpp  
 M  +2 -2      kurlnavigator.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1115714