Do not switch the old-style URL combo box back to breadcrumb navigation mode if the Escape key is pressed while the combo box is open.

Review at http://reviewboard.kde.org/r/3613/

BUG:200842

svn path=/trunk/KDE/kdelibs/; revision=1115714